@@ -34,7 +34,7 @@
         <dependency>
             <groupId>io.github.mkpaz</groupId>
             <artifactId>atlantafx-base</artifactId>
-            <version>2.0.1</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
-            <version>12.3.1</version>
+            <version>12.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
@@ -134,7 +134,7 @@
                 <artifactId>jfx-maven-plugin</artifactId>
                 <version>0.0.7</version>
                 <configuration>
-<!--                    <name>${APP_TYPE}</name>-->
+                    <name>${APP_TYPE}</name>
                     <macPackageIdentifier>kafka-visark</macPackageIdentifier>
                     <mainClass>com.podigua.kafka.VisarkLauncher</mainClass>
                     <vendor>podigua</vendor>
@@ -146,6 +146,28 @@
                     <winShortcut>true</winShortcut>
                     <winPerUserInstall>true</winPerUserInstall>
                     <winShortcutPrompt>true</winShortcutPrompt>
+                    <options>
+                        <option>-Dprism.vsync=false</option>
+                        <option>-Djavafx.animation.fullspeed=true</option>
+                        <option>-Dsun.java2d.allowhidpi=false</option>
+                        <option>-XX:+UnlockExperimentalVMOptions</option>
+                        <option>-XX:+UseCompactObjectHeaders</option>
+                        <option>-XX:+UseStringDeduplication</option>
+                        <option>-XX:TieredStopAtLevel=1</option>
+                        <option>-XX:GCTimeRatio=95</option>
+                        <option>-XX:+G1UseAdaptiveIHOP</option>
+                        <option>-XX:MaxMetaspaceFreeRatio=50</option>
+                        <option>-XX:MinMetaspaceFreeRatio=20</option>
+                        <option>-XX:G1PeriodicGCInterval=500</option>
+                        <option>-XX:InitiatingHeapOccupancyPercent=20</option>
+                        <option>-XX:MaxHeapFreeRatio=10</option>
+                        <option>-XX:MinHeapFreeRatio=3</option>
+                        <option>-XX:G1HeapWastePercent=3</option>
+                        <option>-XX:G1ReservePercent=5</option>
+                        <option>-XX:G1MixedGCCountTarget=1</option>
+                        <option>-XX:MaxGCPauseMillis=30</option>
+                        <option>-Dprism.maxvram=2G</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
